# ExpansionHunter

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  mode_consistency_and_accuracy_tests.py
.github/workflows/: build.yml  docker.yml  trigger_str_analysis_build.yml
docker/: Dockerfile  Makefile  sha256.txt
docs/: 03_Usage.md  04_VariantCatalogFiles.md  05_OutputJsonFiles.md  06_OutputVcfFiles.md  07_AlleleQualityMetrics.md
ehunter/: CMakeLists.txt
ehunter/alignment/: AlignmentClassifier.cpp  AlignmentFilters.cpp  AlignmentFilters.hh  OrientationPredictor.cpp
ehunter/app/: ExpansionHunter.cpp  Version.hh
ehunter/cmake/: EmbedModel.cmake
ehunter/core/: Common.cpp  Common.hh  GenomicRegion.hh  HtsHelpers.cpp  HtsHelpers.hh  LocusStats.cpp  LocusStats.hh  Parameters.cpp  Parameters.hh  Read.cpp  Read.hh  ReadPairs.cpp  ReadPairs.hh  Reference.cpp  Reference.hh  ReferenceContigInfo.cpp  ReferenceContigInfo.hh  RepeatPurity.cpp  RepeatPurity.hh
ehunter/data/: README.md
ehunter/genotype_quality/: GenotypeQualityAnnotator.cpp  GenotypeQualityAnnotator.hh  GenotypeQualityFeatures.cpp  GenotypeQualityFeatures.hh  GenotypeQualityModel.cpp  GenotypeQualityModel.hh
ehunter/genotyping/: AlignMatrix.cpp  StrGenotyper.cpp  StrGenotyper.hh  TwoAlleleStrGenotyper.cpp  TwoAlleleStrGenotyper.hh
ehunter/io/: BamletWriter.cpp  BamletWriter.hh  CatalogLoading.cpp  CatalogLoading.hh  IterativeJsonWriter.cpp  IterativeJsonWriter.hh  IterativeVcfWriter.cpp  IterativeVcfWriter.hh  JsonWriter.cpp  JsonWriter.hh  LocusSpecDecoding.cpp  MateCacheIO.cpp  MateCacheIO.hh  ParameterLoading.cpp  RegionGraph.cpp  SampleStats.cpp  SampleStats.hh  StreamingOutputMerge.cpp  StreamingOutputMerge.hh  StringUtils.cpp  StringUtils.hh  VcfHeader.cpp  VcfHeader.hh  VcfWriter.cpp  VcfWriter.hh
ehunter/locus/: AlignmentBuffer.cpp  AlignmentBuffer.hh  AlleleQualityMetrics.hh  LocusAligner.cpp  LocusAligner.hh  LocusAlignerTest.cpp  LocusAnalyzer.cpp  LocusAnalyzer.hh  LocusAnalyzerTest.cpp  LocusAnalyzerUtil.cpp  LocusAnalyzerUtil.hh  LocusSpecification.cpp  LocusSpecification.hh  RFC1MotifAnalysis.cpp  RFC1MotifAnalysisUtil.cpp  RFC1MotifAnalysisUtil.hh  RepeatAnalyzer.cpp  SmallVariantAnalyzer.cpp  VariantFindings.hh  VariantSpecification.cpp  VariantSpecification.hh
ehunter/reviewer/: Aligns.cpp  Aligns.hh  CMakeLists.txt  ConsensusSequence.cpp  ConsensusSequence.hh  FragLenFilter.cpp  FragLenFilter.hh  GenerateSvg.cpp  GenerateSvg.hh  GenotypePaths.cpp  GenotypePaths.hh  LanePlot.cpp  LanePlot.hh  Metrics.cpp  Metrics.hh  Origin.cpp  Origin.hh  Phasing.cpp  Phasing.hh  Projection.cpp  Projection.hh  ReviewerWorkflow.cpp  ReviewerWorkflow.hh
ehunter/sample/: AnalyzerFinder.cpp  AnalyzerFinder.hh  GenomeMask.cpp  GenomeQueryCollection.cpp  GenomeQueryCollection.hh  HtsFileSeeker.cpp  HtsFileSeeker.hh  HtsFileStreamer.cpp  HtsFileStreamer.hh  HtsLowMemStreamingHelpers.cpp  HtsLowMemStreamingHelpers.hh  HtsLowMemStreamingSampleAnalysis.cpp  HtsLowMemStreamingSampleAnalysis.hh  HtsSeekingSampleAnalysis.cpp  HtsSeekingSampleAnalysis.hh  HtsStreamingSampleAnalysis.cpp  HtsStreamingSampleAnalysis.hh  IndexBasedDepthEstimate.cpp  IndexBasedDepthEstimate.hh  MateExtractor.cpp  MateExtractor.hh
ehunter/tests/: AlignmentBufferTest.cpp  AnalysisModeTest.cpp  CatalogLoadingPlotTest.cpp  ChromosomeStrideTest.cpp  ConsensusSequenceTest.cpp  GenotypeQualityAnnotatorTest.cpp  GenotypeQualityFeaturesTest.cpp  GenotypeQualityModelTest.cpp  HtsLowMemStreamingHelpersTest.cpp  LocusSpecificationPlotTest.cpp  MateExtractorMergeTest.cpp  RFC1MotifAnalysisUtilTest.cpp  RepeatPurityTest.cpp  ReviewerAlignsTest.cpp  ReviewerFragLenFilterTest.cpp  ReviewerGenotypePathsTest.cpp  ReviewerLanePlotTest.cpp  ReviewerOriginTest.cpp  ReviewerPhasingTest.cpp  ReviewerProjectionTest.cpp  ReviewerWorkflowTest.cpp
ehunter/tests/data/parallel_processing_fixtures/: make_fixture.py  reads.bam  reads.bam.bai  reference.fa  reference.fa.fai
